<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/sportFragment">
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.xcx.sport.ui.fragment.LoginFragment"
        android:label="@string/sign_in"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.xcx.sport.ui.fragment.RegisterFragment"
        android:label="@string/register"
        tools:layout="@layout/fragment_register" />
    <fragment
        android:id="@+id/sportFragment"
        android:name="com.xcx.sport.ui.fragment.sport.SportFragment"
        android:label="@string/title_tutorial"
        tools:layout="@layout/fragment_sport">

        <action
            android:id="@+id/action_sportFragment_to_sportMapFragment"
            app:destination="@id/sportMapFragment"
            app:enterAnim="@anim/x_fragment_enter"
            app:exitAnim="@anim/x_fragment_exit"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_sportFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:enterAnim="@anim/x_fragment_enter"
            app:exitAnim="@anim/x_fragment_exit"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_sportFragment_to_sportCourseDetailFragment"
            app:destination="@id/sportCourseDetailFragment"
            app:enterAnim="@anim/x_fragment_enter"
            app:exitAnim="@anim/x_fragment_exit"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/sportMapFragment"
        android:name="com.xcx.sport.ui.fragment.sport.SportMapFragment"
        android:label="@string/title_tutorial"
        tools:layout="@layout/fragment_sport_map" />

    <fragment
        android:id="@+id/communityFragment"
        android:name="com.xcx.sport.ui.fragment.CommunityFragment"
        android:label="@string/title_venues"
        tools:layout="@layout/fragment_community">
        <action
            android:id="@+id/action_communityFragment_to_sportHistoryDetailFragment"
            app:destination="@id/sportHistoryDetailFragment"
            app:enterAnim="@anim/x_fragment_enter"
            app:exitAnim="@anim/x_fragment_exit"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/meFragment"
        android:name="com.xcx.sport.ui.fragment.me.MeFragment"
        android:label="@string/title_me"
        tools:layout="@layout/fragment_me">
        <action
            android:id="@+id/action_meFragment_to_userInfoModifyFragment"
            app:destination="@id/userInfoModifyFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_meFragment_to_sportHistoryDetailFragment"
            app:destination="@id/sportHistoryDetailFragment"
            app:enterAnim="@anim/x_fragment_enter"
            app:exitAnim="@anim/x_fragment_exit"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_meFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:enterAnim="@anim/x_fragment_enter"
            app:exitAnim="@anim/x_fragment_exit"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/userInfoModifyFragment"
        android:name="com.xcx.sport.ui.fragment.me.UserInfoModifyFragment"
        android:label="@string/title_user_info_modify"
        tools:layout="@layout/fragment_user_info_modify" />
    <fragment
        android:id="@+id/sportHistoryDetailFragment"
        android:name="com.xcx.sport.ui.fragment.SportHistoryDetailFragment"
        android:label="@string/title_sportHistoryDetail"
        tools:layout="@layout/fragment_sport_history_detail" />
    <fragment
        android:id="@+id/sportCourseDetailFragment"
        android:name="com.xcx.sport.ui.fragment.sport.SportCourseDetailFragment"
        android:label="@string/title_sportCourseDetailFragment"
        tools:layout="@layout/fragment_sport_course_detail" />
    <!--    <include app:graph="@navigation/sport" />-->
</navigation>
